--- a/app/src/main/res/layout-television/activity_main.xml
+++ b/app/src/main/res/layout-television/activity_main.xml
@@ -21,7 +21,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.267" />
+        app:layout_constraintVertical_bias="0.267"
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/button2"
@@ -35,9 +36,11 @@
         android:layout_marginBottom="363dp"
         android:background="#11FFFFFF"
         android:text="@string/Boton"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
